--- a/components/app/style.css
+++ b/components/app/style.css
@@ -50,3 +50,13 @@ p{
 abbr{
 	border-bottom: #777 dotted 1px;
 }
+
+.spinner .pulse{
+	margin: auto
+}
+
+.loadingdialog{
+	padding-top: 100px;
+	padding-bottom: 100px;
+	font-size: 16pt;
+}
