--- a/components/login/style.css
+++ b/components/login/style.css
@@ -1,3 +1,23 @@
 .login{
+	margin: auto;
 	margin-top: 50px;
+	max-width: 800px;
+}
+.login h3, .login h5{
+	font-weight: 100;
+}
+.login img{
+	display: block;
+	width: 150px;
+	margin: auto;
+}
+.login .branding{
+	border-right: #ccc solid 1px;
+}
+
+@media (max-width: 768px){
+	.login .branding{
+		border-right: none;
+		margin-bottom: 30px;
+	}
 }
